Checkstyle and google formatting.